# PortableXDR

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  byteswap.h  configure.ac  rpcgen_ast.c  rpcgen_codegen.c  rpcgen_int.h  rpcgen_main.c  rpcgen_parse.y  rpcgen_scan.l  xdr_float.c  xdr_mem.c  xdr_rec.c  xdr_stdio.c
lib/: .gitignore
m4/: .gitignore  gnulib-cache.m4
portablexdr-5/rpc/: rpc.h  types.h  xdr.h  xdr_internal.h
rpc/: xdr.h
